Correct name spacing

--- a/_includes/private/style.scss
+++ b/_includes/private/style.scss
@@ -85,6 +85,10 @@ ul {
   margin-bottom: 1rem;
 }
 
+.display-4 {
+  line-height: 1;
+}
+
 .gradient {
   background: linear-gradient(to right, rgba(0,0,0,.6), transparent 25%, transparent 75%, rgba(0,0,0,.6));
   margin-top: 1rem;
